# AeroGen-src

./: AeroGen.pro  CMakeLists.txt  README.md  aerogen_en.ts  aerogen_ru.qm  aerogen_ru.ts  basecell.h  basecoord.h  basefield.cpp  basefield.h  baseformats.h  basegenerator.h  checker.h  figure.h  flexible_field.h  functions.h  icon.qrc  iniparser.cpp  iniparser.h  main.cpp  mainwindow.cpp  mainwindow.h  params.h  program.h  settingsform.cpp  settingsform.h  shader-aniso-ward.fs  shader-aniso-ward.vs  shader-ashikhmin.vs  shader-bidirect.vs  shader-blinn.vs  shader-cartoon.vs  shader-cook.vs  shader-gooch.vs  shader-hemisphere.vs  shader-iso-ward.vs  shader-lambert.vs  shader-lommel.vs  shader-minnaert.vs  shader-oren.vs  (+9 more)
distributor/: devfield.cpp  devfield.h  distributor.cpp  distributor.h
dlca/: ccoord.cpp  ccoord.h  cfield.cpp  cfield.h  ctypes.h  dlca.cpp  dlca.h  field.cpp  field.h  types.h
dlca2/: dlca2.cpp  dlca2.h  field.cpp  field.h  types.h
multidla/: cellsfield.cpp  cellsfield.h  coord.cpp  coord.h  counter.cpp  counter.h  field.cpp  field.h  logger.cpp  logger.h  magicdla.h  mcoord.cpp  mcoord.h  multidla.cpp  multidla.h  sortedvector.cpp  sortedvector.h
mxdla/: field.cpp  field.h  mxdla.cpp  mxdla.h  mxfield.cpp  mxfield.h
osm/: field.cpp  field.h  log.h  ofield.cpp  ofield.h  osm.cpp  osm.h  otypes.h  types.h
xdla/: field.cpp  field.h  xdla.cpp  xdla.h  xfield.cpp  xfield.h
